[package]
name = "girlworld"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.12.1"
features = [
# Comment out when doing distributable builds
    "dynamic_linking"
]

# Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
